--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "drupal-composer/drupal-scaffold": "^2.2",
         "drupal/console": "~1.0",
         "drupal/core": "~8.0",
+        "drupal/examples": "1.x-dev",
         "drush/drush": "~8.0",
         "webflo/drupal-finder": "^0|^1.0.0",
         "webmozart/path-util": "^2.3"
